--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15233,3 +15233,8 @@ li.breadcrumb-menu.d-md-down-none {
 .row.col-row {
     margin: 0px;
 }
+.alert.alert-dismissible{
+  z-index: 999999 !important; 
+  position: absolute;
+  top: 0;
+}
